<resources>
    <string name="app_name">LawAid</string>
    <string name="menu_search">搜索</string>
    <string name="menu_setting">设置</string>
    <string name="homepage">首页</string>
    <string name="require">咨询</string>
    <string name="practice">实践</string>
    <string name="me">我的</string>
    <string name="content">abstract</string>
    <string name="title">title</string>
    <string name="require_community">交流社区</string>
    <string name="require_professional">咨询律师</string>
    <string name="user_id">用户名</string>
    <string name="user_introduction">用户介绍</string>
    <string name="portrait">头像</string>
    <string name="notification">我的通知</string>
    <string name="setting">设置</string>
    <string name="FAQ">帮助与反馈</string>
    <string name="update">检查更新</string>
</resources>
