<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:orientation="horizontal">
    <ImageView
        android:id="@+id/iv_item_practice"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_weight="0.382"
        android:padding="4dp"
        android:contentDescription="@string/homepage"/>
    <LinearLayout
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_weight="0.618"
        android:orientation="vertical"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/tv_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:maxLines="1"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:text="@string/title"/>
        <TextView
            android:id="@+id/tv_item_abstract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:maxLines="3"
            android:text="@string/content"/>
    </LinearLayout>
</LinearLayout>